app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
  namespace: microblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - name: microblog
        image: 886252661956.dkr.ecr.us-east-1.amazonaws.com/reto-3/microblog:v1
        ports:
        - containerPort: 5000
