app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microblog
  namespace: microblog
spec:
  selector:
    app: microblog
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
