ingress_app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog-ingress
  namespace: microblog
  annotations:
    alb.ingress.kubernetes.io/subnets: "subnet-0c1c07ce63c917784,subnet-0c2a2af59ba090c23,subnet-0cfd87a20867546f8"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  number: 80
